--- a/rgn2.ipynb
+++ b/rgn2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,17 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import utils\n",
     "from data import ProteinDataset, sequence_collate\n",
@@ -72,17 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_path = os.curdir + '/data/'\n",
-    "pdb_path = os.curdir + '/data/pdb/structures/pdb/'"
+    "pdb_path = os.curdir + '/data/pdb/structures/pdb/'\n",
+    "encoding = 'tokens'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,17 +106,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ProteinDataset(data_path, 'short', encoding='onehot')\n",
-    "trn_data = DataLoader(dataset, batch_size=32, shuffle=True, collate_fn=sequence_collate)"
+    "no_chains = '1' #1-8, number of chains in the protein\n",
+    "dataset_size = len(bcolz.open(data_path+'proteins_{}.bc'.format(no_chains)))\n",
+    "mask = np.random.random(dataset_size) < 0.8\n",
+    "trn_ixs = np.arange(dataset_size)[mask]\n",
+    "val_ixs = np.arange(dataset_size)[~mask]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trn_dataset = ProteinDataset(data_path, '1', encoding=encoding, indices=trn_ixs)\n",
+    "val_dataset = ProteinDataset(data_path, '1', encoding=encoding, indices=val_ixs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trn_data = DataLoader(trn_dataset, batch_size=32, shuffle=True, collate_fn=sequence_collate)\n",
+    "val_data = DataLoader(val_dataset, batch_size=32, shuffle=False, collate_fn=sequence_collate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -132,10 +148,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, torch.Size([140, 32, 20]), torch.Size([420, 32, 3]))\n",
-      "(1, torch.Size([149, 32, 20]), torch.Size([447, 32, 3]))\n",
-      "(2, torch.Size([146, 32, 20]), torch.Size([438, 32, 3]))\n",
-      "(3, torch.Size([147, 32, 20]), torch.Size([441, 32, 3]))\n"
+      "(0, torch.Size([895, 32]), torch.Size([2685, 32, 3]))\n",
+      "(1, torch.Size([697, 32]), torch.Size([2091, 32, 3]))\n",
+      "(2, torch.Size([746, 32]), torch.Size([2238, 32, 3]))\n",
+      "(3, torch.Size([891, 32]), torch.Size([2673, 32, 3]))\n"
      ]
     }
    ],
@@ -157,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,8 +191,8 @@
     "        if self.input_type == 'onehot':\n",
     "            self.input_size = input_size\n",
     "        elif self.input_type == 'tokens':\n",
-    "            self.input_size = aa2vec.shape[1] + 1\n",
     "            self.embeds, vocab_sz, embed_dim = create_emb_layer(data_path + 'c3_embs.bc')\n",
+    "            self.input_size = embed_dim + 1\n",
     "        \n",
     "        self.lstm = nn.LSTM(self.input_size, hidden_size, num_layers, bidirectional=True)\n",
     "        \n",
@@ -259,17 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, torch.Size([143, 32, 20]), torch.Size([429, 32, 3]), torch.Size([429, 32, 3]))\n",
-      "(1, torch.Size([149, 32, 20]), torch.Size([447, 32, 3]), torch.Size([447, 32, 3]))\n",
-      "(2, torch.Size([149, 32, 20]), torch.Size([447, 32, 3]), torch.Size([447, 32, 3]))\n",
-      "(3, torch.Size([148, 32, 20]), torch.Size([444, 32, 3]), torch.Size([444, 32, 3]))\n"
+      "(0, torch.Size([597, 32]), torch.Size([1791, 32, 3]), torch.Size([1791, 32, 3]))\n",
+      "(1, torch.Size([847, 32]), torch.Size([2541, 32, 3]), torch.Size([2541, 32, 3]))\n",
+      "(2, torch.Size([1045, 32]), torch.Size([3135, 32, 3]), torch.Size([3135, 32, 3]))\n",
+      "(3, torch.Size([941, 32]), torch.Size([2823, 32, 3]), torch.Size([2823, 32, 3]))\n"
      ]
     }
    ],
@@ -278,7 +294,7 @@
     "for i_batch, sampled_batch in enumerate(trn_data):\n",
     "    inp_seq = sampled_batch['sequence']\n",
     "    inp_lens = sampled_batch['length']\n",
-    "    rgn = RGN(20, 1, 'hardtanh', 'onehot')\n",
+    "    rgn = RGN(20, 1, 'hardtanh', encoding)\n",
     "    out = rgn(inp_seq, inp_lens)\n",
     "    print(i_batch, inp_seq.size(), sampled_batch['coords'].size(), out.size())\n",
     "    \n",
@@ -288,22 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgn = RGN(100, 1, 'hardtanh', 'onehot')\n",
-    "drmsd = dRMSD()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "rgn = RGN(100, 1, 'hardtanh', encoding)\n",
     "#rgn.load_state_dict(torch.load(data_path+'models/rgn.pt')) #load pretrained model\n",
-    "optimizer = torch.optim.Adam(rgn.parameters(), lr=1e-3)"
+    "optimizer = torch.optim.Adam(rgn.parameters(), lr=1e-3)\n",
+    "drmsd = dRMSD()"
    ]
   },
   {
@@ -315,14 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18it [00:19,  1.08s/it]\n",
+      "51it [06:45,  7.95s/it]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -330,14 +338,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Loss 16.4842885522\n"
+      "Epoch 0, Train Loss 10.269399004\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18it [00:19,  1.07s/it]\n",
+      "14it [00:45,  3.25s/it]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -345,14 +353,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss 12.6330338646\n"
+      "Epoch 0, Val Loss 8.76346907249\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18it [00:19,  1.07s/it]\n",
+      "51it [06:59,  8.22s/it]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -360,14 +368,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2, Loss 11.7041717978\n"
+      "Epoch 1, Train Loss 8.13909285545\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18it [00:19,  1.08s/it]\n",
+      "14it [00:43,  3.13s/it]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -375,21 +383,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3, Loss 11.5825867933\n"
+      "Epoch 1, Val Loss 8.71808939714\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18it [00:19,  1.08s/it]"
+      "51it [06:16,  7.39s/it]\n",
+      "0it [00:00, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4, Loss 11.9473968955\n",
+      "Epoch 2, Train Loss 8.02683455467\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "14it [00:40,  2.87s/it]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, Val Loss 7.9209457911\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "51it [06:20,  7.45s/it]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, Train Loss 8.04145853996\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "14it [00:39,  2.85s/it]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, Val Loss 7.86673971323\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "51it [06:18,  7.42s/it]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4, Train Loss 7.91031151772\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "14it [00:40,  2.91s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4, Val Loss 8.19588019298\n",
       "Finished Training\n"
      ]
     },
@@ -403,9 +486,10 @@
    ],
    "source": [
     "running_loss = 0.0\n",
-    "last_batch = len(trn_data) - 1\n",
+    "last_batch = len(trn_data) - 2\n",
     "\n",
     "for epoch in range(5):\n",
+    "    last_batch = len(trn_data) - 1\n",
     "    for i, data in tqdm(enumerate(trn_data)):\n",
     "        names = data['name']\n",
     "        coords = data['coords']\n",
@@ -416,12 +500,25 @@
     "        loss = drmsd(outputs, coords)\n",
     "\n",
     "        loss.backward()\n",
-    "        nn.utils.clip_grad_norm_(rgn.parameters(), max_norm=1)\n",
+    "        nn.utils.clip_grad_norm_(rgn.parameters(), max_norm=50)\n",
     "        optimizer.step()\n",
     "\n",
     "        running_loss += loss.item()\n",
     "        if (i != 0) and (i % last_batch == 0):\n",
-    "            print('Epoch {}, Loss {}'.format(epoch, running_loss/i))\n",
+    "            print('Epoch {}, Train Loss {}'.format(epoch, running_loss/i))\n",
+    "            running_loss = 0.0\n",
+    "    \n",
+    "    last_batch = len(val_data) - 1\n",
+    "    for i, data in tqdm(enumerate(val_data)):\n",
+    "        names = data['name']\n",
+    "        coords = data['coords']\n",
+    "        \n",
+    "        outputs = rgn(data['sequence'], data['length'])\n",
+    "        loss = drmsd(outputs, coords)\n",
+    "\n",
+    "        running_loss += loss.item()\n",
+    "        if (i != 0) and (i % last_batch == 0):\n",
+    "            print('Epoch {}, Val Loss {}'.format(epoch, running_loss/i))\n",
     "            running_loss = 0.0\n",
     "\n",
     "print('Finished Training')"
