train on proteinnet

--- a/rgn2.ipynb
+++ b/rgn2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,30 +52,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import utils\n",
-    "from data import ProteinDataset, sequence_collate\n",
+    "from data import ProteinDataset, ProteinNet, sequence_collate\n",
     "from model import *\n",
     "from torch.nn.utils.rnn import pack_padded_sequence, pad_packed_sequence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_path = os.curdir + '/data/'\n",
     "pdb_path = os.curdir + '/data/pdb/structures/pdb/'\n",
-    "encoding = 'tokens'"
+    "encoding = 'onehot'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#t = bcolz.carray(rootdir=data_path+'train30.bc')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,40 +115,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_chains = '1' #1-8, number of chains in the protein\n",
-    "dataset_size = len(bcolz.open(data_path+'proteins_{}.bc'.format(no_chains)))\n",
-    "mask = np.random.random(dataset_size) < 0.8\n",
-    "trn_ixs = np.arange(dataset_size)[mask]\n",
-    "val_ixs = np.arange(dataset_size)[~mask]"
+    "#no_chains = '1' #1-8, number of chains in the protein\n",
+    "#dataset_size = len(bcolz.open(data_path+'proteins_{}.bc'.format(no_chains)))\n",
+    "#mask = np.random.random(dataset_size) < 0.8\n",
+    "#trn_ixs = np.arange(dataset_size)[mask]\n",
+    "#val_ixs = np.arange(dataset_size)[~mask]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trn_dataset = ProteinDataset(data_path, '1', encoding=encoding, indices=trn_ixs)\n",
-    "val_dataset = ProteinDataset(data_path, '1', encoding=encoding, indices=val_ixs)"
+    "trn_dataset = ProteinNet(data_path+'train30.bc')\n",
+    "val_dataset = ProteinNet(data_path+'validation.bc')\n",
+    "#trn_dataset = ProteinNet(data_path+'train30.bc', '1', encoding=encoding, indices=trn_ixs)\n",
+    "#val_dataset = ProteinDataset(data_path, '1', encoding=encoding, indices=val_ixs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "trn_data = DataLoader(trn_dataset, batch_size=32, shuffle=True, collate_fn=sequence_collate)\n",
-    "val_data = DataLoader(val_dataset, batch_size=32, shuffle=False, collate_fn=sequence_collate)"
+    "val_data = DataLoader(val_dataset, batch_size=32, shuffle=False, collate_fn=sequence_collate)\n",
+    "#trn_data = DataLoader(trn_dataset, batch_size=32, shuffle=True, collate_fn=sequence_collate)\n",
+    "#val_data = DataLoader(val_dataset, batch_size=32, shuffle=False, collate_fn=sequence_collate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -148,10 +161,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, torch.Size([895, 32]), torch.Size([2685, 32, 3]))\n",
-      "(1, torch.Size([697, 32]), torch.Size([2091, 32, 3]))\n",
-      "(2, torch.Size([746, 32]), torch.Size([2238, 32, 3]))\n",
-      "(3, torch.Size([891, 32]), torch.Size([2673, 32, 3]))\n"
+      "(0, torch.Size([553, 32, 41]), torch.Size([1659, 32, 3]))\n",
+      "(1, torch.Size([622, 32, 41]), torch.Size([1866, 32, 3]))\n",
+      "(2, torch.Size([749, 32, 41]), torch.Size([2247, 32, 3]))\n",
+      "(3, torch.Size([599, 32, 41]), torch.Size([1797, 32, 3]))\n"
      ]
     }
    ],
@@ -173,13 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RGN(nn.Module):\n",
     "    def __init__(self, hidden_size, num_layers, model_type='hardtanh', input_type='onehot', \n",
-    "                 aa2vec=None, linear_units=None, input_size=21):\n",
+    "                 aa2vec=None, linear_units=None, input_size=42):\n",
     "        super(RGN, self).__init__()\n",
     "\n",
     "        self.hidden_size = hidden_size\n",
@@ -275,17 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, torch.Size([597, 32]), torch.Size([1791, 32, 3]), torch.Size([1791, 32, 3]))\n",
-      "(1, torch.Size([847, 32]), torch.Size([2541, 32, 3]), torch.Size([2541, 32, 3]))\n",
-      "(2, torch.Size([1045, 32]), torch.Size([3135, 32, 3]), torch.Size([3135, 32, 3]))\n",
-      "(3, torch.Size([941, 32]), torch.Size([2823, 32, 3]), torch.Size([2823, 32, 3]))\n"
+      "(0, torch.Size([697, 32, 41]), torch.Size([2091, 32, 3]), torch.Size([2091, 32, 3]))\n",
+      "(1, torch.Size([832, 32, 41]), torch.Size([2496, 32, 3]), torch.Size([2496, 32, 3]))\n",
+      "(2, torch.Size([852, 32, 41]), torch.Size([2556, 32, 3]), torch.Size([2556, 32, 3]))\n",
+      "(3, torch.Size([534, 32, 41]), torch.Size([1602, 32, 3]), torch.Size([1602, 32, 3]))\n"
      ]
     }
    ],
@@ -304,12 +317,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "rgn = RGN(100, 1, 'hardtanh', encoding)\n",
-    "#rgn.load_state_dict(torch.load(data_path+'models/rgn.pt')) #load pretrained model\n",
+    "rgn.load_state_dict(torch.load(data_path+'models/rgn.pt')) #load pretrained model\n",
     "optimizer = torch.optim.Adam(rgn.parameters(), lr=1e-3)\n",
     "drmsd = dRMSD()"
    ]
@@ -323,14 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 70,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "51it [06:45,  7.95s/it]\n",
+      "5it [00:41,  8.24s/it]\n",
       "0it [00:00, ?it/s]"
      ]
     },
@@ -338,141 +353,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Train Loss 10.269399004\n"
+      "Epoch 0, Train Loss 8.78188972473\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14it [00:45,  3.25s/it]\n",
-      "0it [00:00, ?it/s]"
+      "7it [00:17,  2.49s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Val Loss 8.76346907249\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "51it [06:59,  8.22s/it]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1, Train Loss 8.13909285545\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "14it [00:43,  3.13s/it]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1, Val Loss 8.71808939714\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "51it [06:16,  7.39s/it]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2, Train Loss 8.02683455467\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "14it [00:40,  2.87s/it]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2, Val Loss 7.9209457911\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "51it [06:20,  7.45s/it]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3, Train Loss 8.04145853996\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "14it [00:39,  2.85s/it]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3, Val Loss 7.86673971323\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "51it [06:18,  7.42s/it]\n",
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4, Train Loss 7.91031151772\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "14it [00:40,  2.91s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4, Val Loss 8.19588019298\n",
+      "Epoch 0, Val Loss 8.25091075897\n",
       "Finished Training\n"
      ]
     },
@@ -486,10 +381,9 @@
    ],
    "source": [
     "running_loss = 0.0\n",
-    "last_batch = len(trn_data) - 2\n",
     "\n",
-    "for epoch in range(5):\n",
-    "    last_batch = len(trn_data) - 1\n",
+    "for epoch in range(1):\n",
+    "    last_batch = 5 #len(trn_data) - 1\n",
     "    for i, data in tqdm(enumerate(trn_data)):\n",
     "        names = data['name']\n",
     "        coords = data['coords']\n",
@@ -507,6 +401,7 @@
     "        if (i != 0) and (i % last_batch == 0):\n",
     "            print('Epoch {}, Train Loss {}'.format(epoch, running_loss/i))\n",
     "            running_loss = 0.0\n",
+    "            break\n",
     "    \n",
     "    last_batch = len(val_data) - 1\n",
     "    for i, data in tqdm(enumerate(val_data)):\n",
@@ -526,248 +421,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(rgn.state_dict(), data_path+'models/rgn.pt')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "## Geometric Units\n",
-    "\n",
-    "Some basic information about bond angles and lengths can be found here: https://www.ruppweb.org/Xray/tutorial/protein_structure.htm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "To validate that my implementation of the NERF algorithm is correct, I want to get pdb file, use BioPDB to calculate the torsion angles, and then use the ground truth torsion angles to reconstruct the coordinates. The goal is for the dRMSD between the rendered structure and the gt structure to be zero. This would imply that if my LSTM model can correctly predict the torsion angles the calculated coordinates should match the gt PDB file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "#First find a pdb file with no missing coordinates\n",
-    "chain_1 = load_array(data_path+'proteins_1.bc')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "15\n",
-      "19\n"
-     ]
-    }
-   ],
-   "source": [
-    "for ix, chain in enumerate(chain_1[:20]):\n",
-    "    msk = chain[2].sum(1) == 0\n",
-    "    if np.any(msk) == False:\n",
-    "        print(ix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1zur']"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chain_1[2][0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "Protein at index 2 in the proteins_1.bc dataset has no missing atoms, so we can use it for testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "t_angles, b_angles, b_len = utils.gt_dihedral_angles(pdb_path+'pdb1zur.ent')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "Note that angles are in radians, whereas my implementation assumes degrees (can remove the 180 muliplication). Angles in omega are all roughly equal to $\\pi$ in accordance with literatue I've read"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 180,
-   "metadata": {
-    "hidden": true,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([ 0.3138,  0.2345,  0.9201])\n",
-      "tensor([-0.3717,  0.2770, -0.8861])\n",
-      "tensor([ 0.3293, -0.3031,  0.8942])\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = torch.tensor(chain_1[2][2][0], dtype=torch.float)\n",
-    "B = torch.tensor(chain_1[2][2][1], dtype=torch.float)\n",
-    "C = torch.tensor(chain_1[2][2][2], dtype=torch.float)\n",
-    "\n",
-    "#A = torch.tensor([0., 0., 1.], dtype=torch.float)\n",
-    "#B = torch.tensor([0., 1., 0.], dtype=torch.float)\n",
-    "#C = torch.tensor([1., 0., 0.], dtype=torch.float)\n",
-    "\n",
-    "#avg_bond_lens = torch.tensor([1.329, 1.459, 1.525])\n",
-    "#avg_bond_angles = torch.tensor([2.034, 2.119, 1.937])\n",
-    "\n",
-    "pred_coords = torch.stack([A, B, C])\n",
-    "\n",
-    "for ix,triplet in enumerate(t_angles):\n",
-    "    for i in range(3):\n",
-    "        T = b_angles[ix][i] #avg_bond_angles[i] #angle_BCD\n",
-    "        R = b_len[ix][i] #avg_bond_lens[i] #bond_CD\n",
-    "        P = triplet[i] #torsionBC\n",
-    "        \n",
-    "        D2 = torch.stack([-R*torch.cos(T),\n",
-    "                          R*torch.cos(P)*torch.sin(T),\n",
-    "                          R*torch.sin(P)*torch.sin(T)])\n",
-    "\n",
-    "        BC = C - B\n",
-    "        bc = BC/torch.norm(BC, 2)\n",
-    "\n",
-    "        AB = B - A\n",
-    "\n",
-    "        N = torch.cross(AB, bc)\n",
-    "        n = N/torch.norm(torch.cross(AB, bc), 2)\n",
-    "        \n",
-    "        if ix==0:\n",
-    "            print(n)\n",
-    "\n",
-    "        M = torch.stack([bc, torch.cross(n, bc), n], dim=1)\n",
-    "\n",
-    "        D = torch.mm(M, D2.view(-1,1)).squeeze() + C\n",
-    "        \n",
-    "        pred_coords = torch.cat([pred_coords, D.view(1,3)])\n",
-    "        \n",
-    "        A = pred_coords[-3]\n",
-    "        B = pred_coords[-2]\n",
-    "        C = pred_coords[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.0000,  1.4874,  2.5037,  3.6471,  4.9417,  6.0591,  7.2858],\n",
-       "        [ 1.4874,  0.0000,  1.5289,  2.4205,  3.8290,  4.7594,  6.0301],\n",
-       "        [ 2.5037,  1.5289,  0.0000,  1.3304,  2.4853,  3.6839,  4.8436],\n",
-       "        [ 3.6471,  2.4205,  1.3304,  0.0000,  1.4620,  2.4165,  3.6473],\n",
-       "        [ 4.9417,  3.8290,  2.4853,  1.4620,  0.0000,  1.5286,  2.4434],\n",
-       "        [ 6.0591,  4.7594,  3.6839,  2.4165,  1.5286,  0.0000,  1.3305],\n",
-       "        [ 7.2858,  6.0301,  4.8436,  3.6473,  2.4434,  1.3305,  0.0000]])"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pair_dist(pred_coords)[:7, :7]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.0000,  1.4875,  2.5037,  3.6471,  4.9417,  6.0591,  7.2858],\n",
-       "        [ 1.4875,  0.0000,  1.5288,  2.4205,  3.8289,  4.7595,  6.0301],\n",
-       "        [ 2.5037,  1.5288,  0.0000,  1.3304,  2.4853,  3.6839,  4.8436],\n",
-       "        [ 3.6471,  2.4205,  1.3304,  0.0000,  1.4620,  2.4165,  3.6473],\n",
-       "        [ 4.9417,  3.8289,  2.4853,  1.4620,  0.0000,  1.5286,  2.4434],\n",
-       "        [ 6.0591,  4.7595,  3.6839,  2.4165,  1.5286,  0.0000,  1.3305],\n",
-       "        [ 7.2858,  6.0301,  4.8436,  3.6473,  2.4434,  1.3305,  0.0000]], dtype=torch.float64)"
-      ]
-     },
-     "execution_count": 170,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gt_coords = torch.tensor(chain_1[2][2])\n",
-    "pair_dist(gt_coords)[:7, :7]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "Notice that there is a considerable amount of error injected into the geometric units when just using average bond lengths and angles. In particular, since bond lengths are fixed, it is actually impossible to train any model that can achieve zero loss (dRMSD is directly affected by the bond lengths). Using the identity matrix as Mohammed suggested also leads to larger errors even when using the gt torsions. I dislike the idea of lazily allowing these sources of loss to remain in the model, but I want to see if it is possible to reproduce the paper's results before jiggering with the architecture. At the very least, it seems like these parameters should be learnable."
+    "#torch.save(rgn.state_dict(), data_path+'models/rgn.pt')"
    ]
   }
  ],
